--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.4",
+    "@safe-global/api-kit": "^1.3.1",
+    "@safe-global/protocol-kit": "^1.3.0",
+    "ethers": "5.7",
+    "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.1"
+    "sharp": "^0.32.6",
+    "viem": "^1.18.3",
+    "wagmi": "^1.4.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
