--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-tailwind/react": "^2.1.4",
     "@safe-global/api-kit": "^1.3.1",
     "@safe-global/protocol-kit": "^1.3.0",
+    "axios": "^1.6.0",
     "ethers": "5.7",
     "next": "14.0.1",
     "react": "^18",
